--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <title>Para ti mi linda💖</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #fff0f5;
-      font-family: 'Comic Sans MS', cursive;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      overflow: hidden;
-    }
+   body {
+    margin: 0;
+    padding: 0;
+    height: 100%;         
+    background-color: #fff0f5;
+    font-family: 'Comic Sans MS', cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+}
     h1 {
     color: #d63384;
     margin-bottom: 20px;
