--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     const bgMusic = document.getElementById('bgMusic');
     const songTitle = document.getElementById('songTitle');
 
-    const heartTypes = ['❤️', '💕', '💞', '💓', '💗', '💖', '💝', '💘', '💙', '💜', '🧡', '💛', '💚'];
+    const heartTypes = ['❤️', '💕', '💞', '💓', '💗', '💖', '💝', '💘', '💙', '💜', '🧡'];
     let musicPlaying = false;
     let currentSongIndex = 0;
 
