--- a/index.html
+++ b/index.html
@@ -334,16 +334,13 @@
     const bgMusic = document.getElementById('bgMusic');
     const songTitle = document.getElementById('songTitle');
 
-    const heartTypes = ['❤️', '💕', '💞', '💓', '💗', '💖', '💝', '💘', '💙', '💜', '🧡'];
+    const heartTypes = ['❤️', '💕', '💞', '💓', '💗', '💖', '💝', '💘', '💙', '💜', '🧡', '💛', '💚'];
     let musicPlaying = false;
     let currentSongIndex = 0;
 
     // Playlist - you can add your romantic songs here
     const playlist = [
-      { title: "Perfect - Ed Sheeran", src: "" },
-      { title: "All of Me - John Legend", src: "" },
-      { title: "Thinking Out Loud - Ed Sheeran", src: "" },
-      { title: "A Thousand Years - Christina Perri", src: "" }
+      { title: "A Donde Vamos - Morat", src: "songs/A_Donde_Vamos_-_Morat.mp3" }
     ];
 
     // Update song title
