--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@
 
     // Playlist - you can add your romantic songs here
     const playlist = [
-      { title: "A Donde Vamos - Morat", src: "songs/A_Donde_Vamos_-_Morat.mp3" }
+      { title: "A Donde Vamos - Morat", src: songs/A_Donde_Vamos_-_Morat.mp3 },
+       { title: "Niña Bonita - Dstance", src: songs/Niña_Bonita_-_Dstance.mp3 }
+      
     ];
 
     // Update song title
