--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
 
     // Playlist - you can add your romantic songs here
     const playlist = [
-      { title: "A Donde Vamos - Morat", src: "songs/A_Donde_Vamos_-_Morat.mp3" },
-       { title: "Niña Bonita - Dstance", src: "songs/Niña_Bonita_-_Dstance.mp3" }
+      { title: "A Donde Vamos - Morat", src: "songs/A_Donde_Vamos_-_Morat.mp3.mp3" },
+       { title: "Niña Bonita - Dstance", src: "songs/Niña_Bonita_-_Dstance.mp3.mp3" }
       
     ];
 
