--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
       heart.textContent = heartTypes[Math.floor(Math.random() * heartTypes.length)];
       heart.style.left = Math.random() * 100 + 'vw';
       heart.style.top = '-100px'; // Start above the screen
+      heart.style.fontSize = (20 + Math.random() * 40) + 'px';
       const hueShift = Math.random() > 0.5 ? Math.random() * 30 : 280 + Math.random() * 80;
       heart.style.filter = `hue-rotate(${hueShift}deg)`;
       document.body.appendChild(heart);
