--- a/index.html
+++ b/index.html
@@ -387,7 +387,20 @@
     // Playlist - you can add your romantic songs here
     const playlist = [
       { title: "A Donde Vamos - Morat", src: "songs/A_Donde_Vamos_-_Morat.mp3.mp3" },
-      { title: "Niña Bonita - Dstance", src: "songs/Niña_Bonita_-_Dstance.mp3.mp3" }
+      { title: "Niña Bonita - Dstance", src: "songs/Niña_Bonita_-_Dstance.mp3.mp3" },
+      { title: "Bésame Sin Sentir - Micro TDH", src: "songs/Besame_sin_sentir_-_MicroTDH.mp3.mp3" },
+      { title: "De Cero - Morat", src: "songs/De_Cero_-_Morat.mp3.mp3" },
+      { title: "Embrujo - Morat", src: "songs/Embrujo_-_Morat.mp3.mp3" },
+      { title: "La Mitad - Camilo", src: "songs/La_Mitad_-_Camilo.mp3.mp3" },
+      { title: "Me Rehúso - Danny Ocean", src: "songs/Me_Rehuso_-_Danny_Ocean.mp3.mp3" },
+      { title: "Medialuna - Camilo", src: "songs/Medialuna_-_Camilo.mp3.mp3" },
+      { title: "Mi Bendición - Juan Luis Guerra", src: "songs/Mi_Bendicion_-_Juan_Luis_Guerra.mp3.mp3" },
+      { title: "Mi Cuarto - Tiago PZK", src: "songs/Mi_Cuarto_-_TiagoPZK.mp3.mp3" },
+      { title: "Mi Suerte - Morat", src: "songs/Mi_Suerte_-_Morat.mp3.mp3" },
+      { title: "Mi Vida Entera - Morat", src: "songs/Mi_vida_entera_-_Morat.mp3.mp3" },
+      { title: "Por Primera Vez - Camilo", src: "songs/Por_Primera_Vez_-_Camilo.mp3.mp3" },
+      { title: "Primeras Veces - Morat", src: "songs/Primeras_Veces_-_Morat.mp3.mp3" },
+      { title: "Si Estoy Contigo - Camilo", src: "songs/Si_estoy_contigo_-_Camilo.mp3.mp3" }
     ];
 
     // Update song title
